[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/CannonProjectile.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=4]
radius = 0.208312

[sub_resource type="SphereMesh" id=10]

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
flags_unshaded = true
params_blend_mode = 1
albedo_color = Color( 0.368627, 0.894118, 1, 1 )

[node name="Projecticle" type="Area"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 3.5565, 0, 0, 0, 3.5565, 0, 0, 0, 3.5565, 0, 0, 0 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.4
autostart = true

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 0.742574, 0, 0, 0, 0.742574, 0, 0, 0, 0.742574, 0, 0, 0 )
mesh = SubResource( 10 )
material/0 = SubResource( 9 )

[connection signal="area_entered" from="." to="." method="_on_Particle_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
